@@ -47,7 +47,7 @@ import org.testng.annotations.Test;
  * @test
  * @bug 8190835
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true datatype.DurationTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow datatype.DurationTest
  * @run testng/othervm datatype.DurationTest
  * @summary Test Duration.
  */
